# uppercut

./: .gitignore  LICENSE  README.md  package.xml  pyproject.toml
docs/: index.html
freecad/UppercutWB/: __init__.py  assembly.py  commands.py  companion_install.py  dialogs.py  eraser.py  group.py  init_gui.py  navstyle.py  paint.py  shortcuts.py  toolstate.py
verify/: headless_regression.py  out-rename-check.txt  run_gui.py
verify/drivers/: highlight_driver.py  uppercut_driver.py
