[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "freecad-uppercut"
version = "0.4.0"
description = "A simplified, SketchUp-style umbrella interface for FreeCAD, assembled from companion addons."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["freecad*"]
